# template-repo

./: .aliases  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  sample.env
.github/workflows/: main.yml
hooks/: pre-commit
src/app/: main.py  settings.py
src/scripts/: code-checks.sh  entrypoint.sh  format.sh  run-tests.sh
